Update tsconfig to include new JSX file and change title and content in index.jsx from 三橋貴明 to 堀江貴文

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "./src/.umi/tsconfig.json",
-  "include": ["typings.d.ts", "src"]
+  "include": ["typings.d.ts", "src", "src/pages/堀江贵文V17.0/.jsx"]
 }
